reorganize data; refactor

--- a/test/LEGO_chromaticity.ipynb
+++ b/test/LEGO_chromaticity.ipynb
@@ -295,7 +295,7 @@
     "points = {}\n",
     "hex_values = {}\n",
     "\n",
-    "with open('lego_colors.csv', mode='r') as csv_file:\n",
+    "with open('data/lego_colors.csv', mode='r') as csv_file:\n",
     "    csv_reader = csv.DictReader(csv_file)\n",
     "    for row in csv_reader:\n",
     "        try:\n",
