--- a/test/Sensor_chromaticity_analysys.ipynb
+++ b/test/Sensor_chromaticity_analysys.ipynb
@@ -28,8 +28,9 @@
    "outputs": [],
    "source": [
     "def ingest(filename, color):\n",
+    "    filepath = \"data/\" + filename\n",
     "    points_list = []\n",
-    "    with open(filename, mode='r') as csv_file:\n",
+    "    with open(filepath, mode='r') as csv_file:\n",
     "        csv_reader = csv.reader(csv_file)\n",
     "        for row in csv_reader:\n",
     "            points_list.append(np.array(row, dtype=float))\n",
