--- a/test/Sensor_chromaticity_analysys.ipynb
+++ b/test/Sensor_chromaticity_analysys.ipynb
@@ -158,7 +158,7 @@
    "source": [
     "### Conclusions:\n",
     " - yellows are no good. Either confuse with the track or the carpet.\n",
-    " - red, green, and blue are good - can be used to create a basic segment layout.\n",
+    " - red, green, and blue are good - can be used to create a basic sector layout.\n",
     " - azure an blue tiles are essentially the same as far as hue/saturation goes.\n",
     " - discrimination between blue and the track needs to account for both hue and saturation.\n",
     " - purple needs some work to create isolation regions in the hue-saturation space. It could be used as auxiliary speed control, perhaps?\n",
